# PJQAQC

./: .gitignore  README.md  dummy_qcrecord.json
backend/: .env.sample  database.py  example_xn3000.sql  init_db.sql  instruments_rows.sql  main.py  pyproject.toml  qc_records_rows.sql  register.py  requirements.txt  schema_readme.md  westgard.py  westgard_guide.md
frontend/: app.js  index.html  style.css
