[project]
name = "pjqaqc-backend"
version = "1.0.0"
description = "QAQC 品管管理系統後端 (FastAPI + MySQL + Claude)"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "anthropic==0.69.0",
]

[tool.uv]
package = false
